--- a/src/test/resources/project.properties
+++ b/src/test/resources/project.properties
@@ -1,4 +1,6 @@
 browserType=CHROME
 baseURL=http://app.tca.deltixuat.com
 driverLocation=src/chromedriver.exe
+userName=selenium_chrome
+password=Axa@Demo
 
