--- a/src/test/resources/project.properties
+++ b/src/test/resources/project.properties
@@ -3,4 +3,5 @@ baseURL=http://app.tca.deltixuat.com
 driverLocation=src/chromedriver.exe
 userName=selenium_chrome
 password=Axa@Demo
+remoteWebDriverUrl=http://localhost:4444
 
